--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=S05T02BiergeOscar
 
 server.port=9004
 
+#Conexion a la base de datos
 spring.datasource.url= jdbc:mysql://localhost:3306/t5JocDeDaus?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username= root
 spring.datasource.password= root
 spring.jpa.hibernate.ddl-auto= update
+
+#Mostrar consultas SQL en consola
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
